--- a/final-term/public/index.html
+++ b/final-term/public/index.html
@@ -9,7 +9,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Todo App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <title>Video Player</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
